Fix: .hamb-menu scroll and height flickering

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ header {
   color: var(--c5);
   font-size: 2em;
   margin-bottom: 1em;
+  padding: 0.25em;
 }
 
 h1 {
@@ -797,22 +798,21 @@ footer a {
     width: fit-content;
   }
 
+  .navbar.menu-only header {
+    /* Don't use gray colors against black background */
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
+  }
+
   header {
     font-size: 1.5em;
     background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(5px);
     margin: 0;
-    padding: 0 0.5em;
     border: var(--sp2) solid var(--c5);
     display: flex;
     align-items: center;
     gap: var(--sp5);
-    min-height: var(--sp9);
-  }
-
-  header.menu {
-    padding: 0.25em;
-    min-height: initial;
+    min-height: calc(var(--sp9) - var(--sp3));
   }
 
   .nav-links-container {
@@ -971,7 +971,6 @@ footer a {
 @media screen and (max-width: 510px) {
   header {
     font-size: 1.25em;
-    padding: 0.25em 0.5em;
     gap: var(--sp3);
   }
 
